# raytr

./: CMakeLists.txt  Makefile  README.md  bbox_tree.cpp  bbox_tree.h  bxdfs.h  camera.h  collisionmanager.h  common.h  image.cpp  image.h  main.cpp  meshsimp1.cpp  meshsimp1.h  objekt.cpp  objekt.h  objloader.cpp  objloader.h  pathtracer.cpp  pathtracer.h  photon_tree.cpp  photon_tree.h  pm.cpp  pm.h  primitives.cpp  primitives.h  random.cpp  random.h  scene.cpp  scene.h  shade.cpp  shade.h  spectrum.cpp  spectrum.h  stdafx.h
cmake/: PrecompiledHeader.cmake
ext/: SimpleObject.cpp  SimpleObject.h
scenes/buddha/: main.json  main.mtl
scenes/cornell/: CornellBox-Original.mtl  cornell.json
scenes/cornell_dof/: dof.json  dof.mtl
scenes/dragon/: d.bat  dragon-ppm.json  dragon.json  dragon.mtl
scenes/gems/: .directory  main.json  test.mtl
scenes/prism/: prism.json  prism.mtl
